# clauseguard

./: .env.example  .gitignore  BUILD_BRIEF.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_PLAN.md  README.md  docker-compose.yml  pyproject.toml
data/synthetic/: README.md
scripts/: run_demo.py
src/clauseguard/: __init__.py  config.py  exceptions.py  logging_config.py
src/clauseguard/adapters/audit/: in_memory.py
src/clauseguard/adapters/extraction/: llm_stub.py
src/clauseguard/adapters/ingestion/: pdf_parser.py
src/clauseguard/adapters/matching/: heuristic.py
src/clauseguard/api/: app.py  dependencies.py  schemas.py
src/clauseguard/api/routers/: health.py  reconciliation.py
src/clauseguard/confidence/: scorer.py
src/clauseguard/domain/: enums.py  models.py
src/clauseguard/ports/: audit.py  extraction.py  ingestion.py  matching.py
src/clauseguard/rules/: base.py  checks.py  engine.py
src/clauseguard/services/: reconciliation.py
tests/: conftest.py  test_domain_models.py  test_reconciliation_service.py  test_rules_engine.py
