[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clauseguard"
version = "0.1.0"
description = "Audit-grade contract-to-invoice reconciliation and spend-leakage detection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
# Phase 2+ document/ML extras, kept optional so the core installs lean.
ingestion = ["pdfplumber>=0.11"]
matching = ["rapidfuzz>=3.6"]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["UP042"]  # `str, Enum` is intentional for Pydantic compatibility

[tool.ruff.lint.flake8-bugbear]
# fastapi.Depends in argument defaults is the idiomatic DI pattern, not a bug.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path"]
